--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -4,6 +4,7 @@ ignoreFiles:
 plugins:
   - stylelint-order
 rules:
+  selector-class-pattern: null
   at-rule-no-unknown: null
   no-descending-specificity: null
   scss/no-global-function-names: null
